updated till project 17

--- a/Project-05/index.html
+++ b/Project-05/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project 5</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Projects and practice</h1>
     <div class="container">
         <div class="box">
-            <p>1</p>
+            <p class="cap">01</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget.</p>
             <img src="./assets/Frame 14165.png" alt="Image 1">
 
         </div>
         <div class="box">
-            <p>2</p>
+            <p class="cap">02</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget.</p>
             <img src="./assets/Frame 14165 (1).png" alt="Image 1"> 
         </div>
         <div class="box">
-            <p>3</p>
+            <p class="cap">03</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget.</p>
             <img src="./assets/Frame 14165 (2).png" alt="Image 1">
         </div>
