--- a/project-02/index.html
+++ b/project-02/index.html
@@ -2,27 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project-2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="top-left">
         <h1>Discover the beauty around the world</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu.</p>
-        <button>Explore </button>
+        <button>Get Started</button>
     </div>
-    <img class="top-left-img" src="./assets/1.png" alt="">
-    <img class="top-right-img" src="./assets/2.png" alt="">
-    <div class="down-raw">
-        <div class="im">1
-            <img class="imd"src="./assets/5.png" alt="">
+    <img class="top-middle" src="./assets/1.png" alt="Top Middle Image">
+    <img class="top-right" src="./assets/2.png" alt="Bottom Right Image">    
+    <div class="bottom">
+        <div class="imd">
+            <p class="cap">1</p>
+            <img src="./assets/5.png" alt="Bottom Left Image">
         </div>
-        <div class="im">2
-            <img class="imd" src="./assets/6.png" alt="">
+        <div class="imd">
+            <p class="cap">2</p>
+            <img src="./assets/6.png" alt="Bottom Left Image">
         </div>
-        <div>3
-            <img class="imd" src="./assets/7.png" alt="">
+        <div class="imd">
+            <p class="cap">3</p>
+            <img src="./assets/7.png" alt="Bottom Left Image">
         </div>
-        
+    </div>
+
 </body>
 </html>
