--- a/Project-01/index.html
+++ b/Project-01/index.html
@@ -12,7 +12,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
             <button>Explore</button>
         </div>
-        <div>
+        <div class="image-section">
             <div class="line1">
                 <img src="./Assets/1.png">
                 <img src="./Assets/2.png">
