--- a/project-06/index.html
+++ b/project-06/index.html
@@ -1,1 +1,90 @@
-<p></p>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project 06</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="icon-box">
+        <p class="let1 let">d</p>
+        <p class="let2 let">o</p>
+        <p class="let3 let">l</p>
+        <p class="let4 let">a</p>
+        <p class="let5 let">r</p>
+        <p class="let6 let"> </p>
+        <p class="let7 let">s</p>
+        <p class="let8 let">i</p>
+        <p class="let9 let">t</p>
+        <p class="let10 let"> </p>
+        <p class="let11 let">a</p>
+        <p class="let12 let">m</p>
+        <p class="let13 let"> </p>
+        <p class="let14 let">p</p>
+        <p class="let15 let">r</p>
+        <p class="let16 let">o</p>
+        <p class="let17 let">j</p>
+        <p class="let18 let">e</p>
+        <p class="let19 let">t</p>
+        <p class="let20 let">,</p>
+        <p class="let21 let"> </p>
+        <p class="let22 let">c</p>
+        <p class="let23 let">o</p>
+        <p class="let19 let">n</p>
+        <p class="let20 let">s</p>
+        <p class="let21 let">L</p>
+        <p class="let22 let">o</p>
+        <p class="let23 let">a</p>
+        <p class="let24 let">d</p>
+        <p class="let25 let">i</p>
+        <p class="let26 let">n</p>
+        <p class="let27 let">g</p>
+        <p class="let28 let">r</p>
+        <p class="let24 let">e</p>
+        <p class="let25 let">m</p>
+        <p class="let26 let">r</p>
+        <p class="let27 let">i </p>
+        <p class="let28 let">p</p>
+        <p class="let29 let">s</p>
+        <p class="let30 let">u</p>
+        <p class="let31 let">m</p>
+        <p class="let32 let"> </p>
+        <img class="ico" src="./assets/Group.png" alt="icon">
+    </div>
+    <div class="data-box">
+        <h1>THE eWatch with the newest microchip technology</h1>
+        <p class="top-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
+        <button class="button1">Order now</button>
+        <button class="button2">Explore more</button>
+    </div>
+    <div class="img-r">
+        <img class="img2" src="./assets/Stroke.png" alt="image2"> 
+        <img class="img1" src="./assets/Star.png" alt="image1">
+        <img class="img3" src="./assets/Stroke (1).png" alt="image3">
+        <img class="img4" src="./assets/unsplash_QRWAdBCqysc.png" alt="image4">
+        <img class="img5" src="./assets/star (1).png" alt="image5">
+        <img class="img6" src="./assets/star2.png" alt="image6">
+        <div class="down-box">
+            <div class="div1">
+                <img class="icons" src="./assets/Icons.png" alt="icons">
+                <p>Lorem ipsu dolor amet</p>
+
+            </div>
+            <div class="div1">
+                <img class="icon1" src="./assets/Icons (1).png" alt="icons">
+                <p>Lorem ipsu dolor amet</p>
+            </div>
+            <div class="div1">
+                <img class="icon1" src="./assets/Icons (2).png" alt="icons">
+                <p>Lorem ipsu dolor amet</p>
+            </div>
+            <div class="div1">
+                <img class="icon1" src="./assets/Icons (3).png" alt="icons">
+                <p>Lorem ipsu dolor amet</p>
+            </div>      
+         
+    </div>
+</body>
+</html>
