--- a/project-12/index.html
+++ b/project-12/index.html
@@ -12,7 +12,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
     <button>Explore</button>
 </div> 
-<div class="bottom-l">
+<div>
        <img class="Spiral" src="./assets/Spiral 3.png" alt="Image">
        <div class="top-small">
         <img src="./assets/Waves.png" alt="Image">
